Add somewhat fix to reads

--- a/app/views/reads/index.html.erb
+++ b/app/views/reads/index.html.erb
@@ -2,7 +2,7 @@
 <ol id="hot-reads">
 <% @hot_reads.each do |read| %>
   <li class='hot-read'>
-    <a href="<%= read.url %>"><%= read.url %></a>
+    <a href="<%= read[0] %>"><%= read[0] %></a>
   </li>
 <% end %>
 </ol>
